# footballdecoded

./: .env  .env.example  .gitignore  CLAUDE.md  CONDA_SETUP.md  DEVELOPMENT.md  LICENSE.rst  Makefile  README.md  README.rst  a.md  a.py  claude-code-review.yml  database_health_report_20250615_133751.json  database_health_report_20250615_133850.json  debug_raw_shots.csv  debug_season.py  debug_standardized_shots.csv  environment.yml  next.config.js  package-lock.json  package.json  pyproject.toml  quick_teams_insert.py  test_shots_Cody_Gakpo_fixed.csv  tfm_deep_analysis.py
analysis/tactical_analysis/: PSG.ipynb  psg_team_complete_data.csv  understat_match_28351_complete.csv  whoscored_match_1824012_complete.csv
app/: Main.tsx  layout.tsx  tag-data.json
app/about/: page.tsx
app/newsletter/: page.tsx
blog/: .env.example  .gitignore  NotebookLM.md  contentlayer.config.ts  get_match_ids.py  inter_miami_match_ids_2025.csv  jsconfig.json  next.config.js  package-lock.json  package.json  tsconfig.json
blog/app/: Main.tsx  layout.tsx  page.tsx  sitemap.ts  tag-data.json  theme-providers.tsx
blog/components/: ArticleCard.tsx  ArticleCardHome.tsx  ArticleDropdown.tsx  ArticlesLayout.tsx  ArticlesSidebar.tsx  AuthButton.tsx  BioSection.tsx  CommentForm.tsx  CommentsList.tsx  Footer.tsx  Header.tsx  MDXComponents.tsx  MobileNav.tsx  NewsletterForm.tsx  PhotoCarousel.tsx  ScrollTopAndComment.tsx  SearchButton.tsx  SectionContainer.tsx  SectionsBar.tsx  SectionsNavigation.tsx  SessionProvider.tsx  SimpleTagLayout.tsx
blog/content/: headerNavLinks.ts  projectsData.ts  siteMetadata.js
blog/css/: tailwind.css
blog/data/: ansu_fati_all_events_25-26.csv  ansu_fati_all_shots_25-26.csv  arsenal_events_2425_first11.csv  arsenal_shots_2425.csv  (+9 more)
components/: ArticleCard.tsx  ArticlesLayout.tsx  ArticlesSidebar.tsx  AuthButton.tsx  CommentForm.tsx  Footer.tsx  Header.tsx  SectionsBar.tsx  SectionsNavigation.tsx
content/: headerNavLinks.ts  siteMetadata.js
data/: __init__.py  projectsData.ts  whoscored.py
database/: __init__.py  connection.py  data_loader.py  data_loader_v2.py  database_checker.py  database_checker_v2.py  logger.py  setup.sql  setup_extras.sql  setup_v2.sql  tfm_loader.py
edata/: fbref_data.py  understat_data.py  whoscored_data.py
functions/: fbref_data.py  pd_FBref.py
match_data/: match_1821769_connections_20250609_190029.csv  match_1821769_passes_20250609_190029.csv  match_1821769_players_20250609_190029.csv
predictions/: __init__.py  _config.py  data_collector.py  dixon_coles.py  ensemble.py  evaluation.py  features.py  predict_wc2026.py  simulation.py  squad_builder.py
scrappers/: __init__.py  _common.py  _config.py  _utils.py  elo.py  fbref.py  fotmob.py  sofascore.py  transfermarkt.py  transfermarkt_penalties.py  understat.py  whoscored.py
scripts/: rss.mjs
similarity/: README.md  TFM.md  __init__.py  data_preparation.py  feature_engineering.py  gmm_clustering.py  lewandowski_replacement.ipynb  player_similarity.py  tfm_analysis.py  tfm_validate.ipynb  umap_gmm_template.ipynb  umap_reducer.py  validation.py  visualization.py
tfm/: .gitignore  IMPLEMENTATION_NOTES.md  README.md  __init__.py  example_cosine_validation.ipynb  example_kmeans_usage.ipynb  query_helpers.py  radares.ipynb  tfm.md
visualization/: SDC-TF-Jaime-Oriol.ipynb  match_data.py  pass_network.py  test.ipynb
viz/: README.md  __init__.py  a.ipynb  assist_passes.py  assisted_goals.py  box_entries.py  dribbles_heatmap.py  goals_origin.py  impact_timeline.py  match_data.py  match_data_v2.py  pass_analysis.py  pass_flow.py  pass_hulls.py  pass_network.py  progression_xthreat.py  scatter.py  shot_map_report.py  shot_xg.py  stats_radar.py  stats_table.py  swarm_radar.py  tournament_bracket.py  viz.ipynb
wrappers/: README.md  __init__.py  _init_.py  elo_data.py  fbref_data.py  fotmob_data.py  sofascore_data.py  transfermarkt_data.py  understat_data.py  whoscored_data.py
(+334 files in other folders)
