[tool.poetry]
name = "footballdecoded"
version = "1.0.0"
description = "Professional football data extraction and analysis toolkit for tactical analysis"
authors = ["Jaime Oriol <jaime@footballdecoded.com>"]
license = "MIT"
readme = 'README.rst'
homepage = "https://github.com/jaimeoriol/footballdecoded"
repository = "https://github.com/jaimeoriol/footballdecoded"
documentation = "https://footballdecoded.readthedocs.io"
keywords = ["soccer", "football", "soccer data", "web scraping", "soccer analytics", "tactical analysis", "fbref", "understat", "whoscored"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    {include = "scrappers"},
    {include = "wrappers"},
    {include = "viz"},
    {include = "database"}
]

[tool.poetry.urls]
Changelog = "https://github.com/jaimeoriol/footballdecoded/releases"
Documentation = "https://footballdecoded.readthedocs.io"
"Bug Tracker" = "https://github.com/jaimeoriol/footballdecoded/issues"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
# VERSIONES COMPATIBLES - USANDO RANGOS FLEXIBLES
numpy = "^1.24.0,<2.0.0"
pandas = "^2.2.0,!=2.1.0,<3.0.0"
lxml = "^4.9.3,<5.0.0"
html5lib = "^1.1,<2.0"
urllib3 = "^1.26.0,<2.0"
wrapper-tls-requests = "^1.1.4,<2.0.0"
tqdm = "^4.67.1"
rich = "^13.6.0"
unidecode = "^1.4.0"
# Selenium y SeleniumBase compatibles
selenium = "^4.15.0"
seleniumbase = "^4.21.0"
# Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.17.0"
scipy = "^1.13.0"
shapely = "^2.0.0"
mplsoccer = "^1.5.0"
pillow = "^11.0.0"
# Optional
socceraction = {version = "1.5.3", optional = true}

[tool.poetry.extras]
socceraction = ["socceraction"]
visualization = ["matplotlib", "seaborn", "plotly"]
analysis = ["matplotlib", "seaborn", "plotly", "socceraction"]

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-deadfixtures = "^2.2.1"
pytest-mock = "^3.10.0"
coverage = {version = "^7.0", extras = ["toml"]}
time-machine = "^2.8.2"

[tool.poetry.group.dev.dependencies]
Pygments = "^2.13.0"
bumpversion = "^0.6.0"
darglint = "^1.8.1"
ruff = "*"
mypy = "*"
pep8-naming = "^0.15.0"
pre-commit = "^4.0.0"
pre-commit-hooks = "^5.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.0.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.0.0"
furo = "^2024.0.0"
nbsphinx = "^0.9.0"
sphinx-autobuild = "^2024.0.0"

[tool.coverage.paths]
source = ["scrappers", "wrappers", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["scrappers", "wrappers", "tests"]

[tool.coverage.report]
show_missing = true
ignore_errors = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.ruff]
src = ['scrappers', 'wrappers', 'tests']
line-length = 99
target-version = 'py39'

[tool.ruff.lint]
select = [
  'A',
  'ARG',
  'B',
  'B9',
  'C',
  'C4',
  'D',
  'DTZ',
  'E',
  'F',
  'I',
  'N',
  'PIE',
  'PT',
  'PTH',
  'Q',
  'RET',
  'RUF',
  'SIM',
  'SLF',
  'T10',
  'TCH',
  'UP',
  'W',
]
ignore = ['B904']

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['F401']
"tests/*" = [
    'S',
    'D212',
    'D415',
    'D205',
    'D103',
    'D104',
    'N999',
    'SLF001',
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.lint.isort]
known-first-party = ["scrappers", "wrappers", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"